# api-blueprint

./: .gitignore  AGENTS.MD  Makefile  PRE_README.MD  README.md  README_EN.md  main.py  pyproject.toml  release-version.toml
.github/actions/release-bundle/: action.yml
.github/actions/setup-example-toolchains/: action.yml
.github/workflows/: ci.yml  release-rc.yml  release.yml
docs/: release-process.md
docs/en/: benchmarks.md  binary-schema.md  blueprint-dsl.md  configuration.md  examples-validation.md  generators.md  getting-started.md  go-websocket-channel-runtime.md  grpc.md  wails.md
docs/plans/: 0001-20260520-generated-artifact-escape-hatches.md
docs/plans/resolved/: 0001-20260520-generated-artifact-escape-hatches.md  0004-20260522-production-escape-hatches-and-narrow-entrypoints.md  0005-20260522-server-resource-guards-file-streaming-and-dependency-hygiene.md  0006-20260522-go-client-multipart-streaming-and-performance-review-closure.md  examples-conformance-benchmark-streaming-and-generated-cleanup.md  (+1 more)
docs/refactor/: implementation-plan.md
docs/reviews/: 0001-20260521-examples-conformance安全审查.md  0001-[20260521]examples-conformance安全审查.md  0002-20260521-media-raw-transport-extension.md  0003-20260521-binary-response-and-file-filename-semantics.md  0006-20260522-client-server安全并发裁剪与依赖风险审查.md  0007-20260522-client-server性能与conformance覆盖边界审查.md  0011-20260603-legacy-json兼容类型缺口.md  0013-20260619-python-client顶层数组响应别名碰撞.md  0014-20260620-python-client-emptybody-null-envelope.md  0016-20260622-openapi不承载消息协议设计边界.md
docs/wails/: implementation-plan.md
docs/zh/: benchmarks.md  binary-schema.md  blueprint-dsl.md  configuration.md  examples-validation.md  generators.md  getting-started.md  go-websocket-channel-runtime.md  grpc.md  wails.md
examples/: api-blueprint.agent.json  api-blueprint.agent.md  api-blueprint.contract.json  api-blueprint.contract.md  api-blueprint.index.json  api-blueprint.toml
examples/api-blueprint.contract.d/: index.json
examples/blueprints/: __init__.py  alt_conflict.py  api_binary.py  api_conflict.py  api_demo.py  api_hello.py  api_media.py  app.py  errors.py  headers.py  legacy_rootless.py  runtime_status.py  static_demo.py
examples/flutter/: pubspec.yaml
examples/golang/: go.mod  main.go
examples/swift/: Package.swift
examples/typescript/: conformance.ts  index.ts  suite.ts  tsconfig.json
examples/wails-hello/: .gitignore  api-blueprint.toml
make/: core.mk  examples.mk  release.mk  wails.mk
scripts/: __init__.py  benchmark_binary.py  benchmark_binary_client.py  example_validation.py  release_assets.py  release_version.py
scripts/example_benchmark/: __main__.py  binary.py  cli.py  protocol.py  swift_runtime.py
scripts/example_conformance/: __init__.py  __main__.py  cli.py  manifest.py  reporter.py  runner.py  safety.py  scenarios.py  server.py  tools.py  workspace.py
scripts/example_validation/: __init__.py  cli.py  compile.py  connection_contract.py  constants.py  generate.py  language_checks.py  models.py  runner.py  snapshot.py  swift_smoke.py  tools.py  workspace.py
src/api_blueprint/: __init__.py  config.py  helper.py  includes.py  release_version.py  route_selection.py
tests/: conftest.py  support.py
tests/application/: test_generator_generation.py  test_generator_generation_contract_graph.py  test_ir_plugin.py  test_vnext_generation.py  test_vnext_generation_contract_graph.py
tests/cli/: test_apigen.py  test_commands.py  test_config_resolution.py  test_generator_targets.py  test_vnext_apigen.py  test_vnext_targets.py
tests/codegen/: test_flutter_codegen.py  test_go_naming.py  test_golang_client_codegen.py  test_golang_codegen.py  test_golang_toolchain.py  test_java_codegen.py  test_kotlin_codegen.py  test_python_codegen.py  test_registry.py  test_shared_planning.py  test_typescript_codegen.py  test_wails_codegen.py
tests/contract/: test_graph.py
tests/core/: test_blueprint_build.py  test_config.py  test_files.py  test_templates.py  test_utils.py
tests/engine/: test_binary_schema.py  test_blueprint_build.py  test_connection_dsl.py  test_docs_runtime.py  test_includes.py  test_media_contract.py  test_path_params.py  test_schema.py
tests/grpc/: test_proto_codegen.py  test_selection.py  test_toolchain.py  test_writer.py
tests/packaging/: test_build_artifacts.py
tests/release/: test_release_assets.py  test_version_script.py
tests/scripts/: test_benchmark_binary.py  test_example_benchmark.py  test_example_conformance.py  test_example_validation_structure.py  test_example_validation_targets.py
tests/support/: __init__.py  examples.py  paths.py
(+2681 files in other folders)
