[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "api-blueprint"
dynamic = ["version"]
description = "Python DSL to define API blueprints and generate FastAPI, Go, TypeScript, and gRPC artifacts."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["api", "blueprint", "codegen", "openapi", "fastapi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
    { name = "ZSA233", email = "zzsaim233@gmail.com" },
]
maintainers = [
    { name = "ZSA233", email = "zzsaim233@gmail.com" },
]
dependencies = [
    "click>=8.1.8,<9",
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "jinja2>=3.1,<4",
    "pydantic>=2.10,<3",
    "uvicorn>=0.30,<1",
]

[project.urls]
Homepage = "https://github.com/ZSA233/api-blueprint"
Source = "https://github.com/ZSA233/api-blueprint"
Documentation = "https://github.com/ZSA233/api-blueprint"
Bug-Reports = "https://github.com/ZSA233/api-blueprint/issues"
Changelog = "https://github.com/ZSA233/api-blueprint/releases"

[project.scripts]
api-doc-server = "api_blueprint.cli.apidoc:apidoc_server"
api-gen-golang = "api_blueprint.cli.apigen:gen_golang"
api-gen-typescript = "api_blueprint.cli.apigen:gen_typescript"
api-gen-grpc = "api_blueprint.cli.apigen:gen_grpc"

[dependency-groups]
dev = [
    "grpcio-tools>=1.76,<2",
    "pytest>=8.3,<9",
]

[tool.hatch.version]
path = "src/api_blueprint/_version.py"

[tool.hatch.build]
include = [
    "src/api_blueprint/**/*.py",
    "src/api_blueprint/hub/templates/**/*",
    "src/api_blueprint/static/**/*",
    "src/api_blueprint/writer/templates/**/*",
    "LICENSE",
    "README.md",
    "README_EN.md",
    "PRE_README.MD",
    "AGENTS.MD",
    "Makefile",
]

[tool.hatch.build.targets.wheel]
packages = ["src/api_blueprint"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/examples",
    "/tests",
    "/docs",
    "/scripts",
    "/.github",
    "/LICENSE",
    "/README.md",
    "/README_EN.md",
    "/PRE_README.MD",
    "/AGENTS.MD",
    "/Makefile",
    "/pyproject.toml",
    "/release-version.toml",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "example_validation: integration validation that requires external Go/Node toolchains and is covered by the dedicated CI job",
]
